--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,5 @@
     <string name="save_and_export">export to</string>
     <string name="dismiss">Dismiss</string>
     <string name="confirm">Confirm</string>
-    <string name="delete_message">you want to delete this note?</string>
+    <string name="delete_message">delete this note?</string>
 </resources>
